# formula-1-schedule

./: Dockerfile  README.md  fetcher.py  pyproject.toml  requirements.txt  server.py
.cache/: alt_api_2025.json
src/: fetcher.py  server.py
